# Model-Loader

./: CMakeLists.txt  README.md  main.cpp
src/: Application.cpp  Application.h  ModelLoader.cpp  ModelLoader.h  References.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UserInterface.cpp  UserInterface.h
src/Models/soldier/: imgui.ini
src/Shaders/Fragment/: FragmentShader.glsl
src/Shaders/Vertex/: VertexShader.glsl
